[project]
name = "bias-ext-points"
version = "0.1.0"
dependencies = ["bias-core>=0.1,<0.2"]
[project.entry-points."bias.extensions"]
points = "bias_ext_points.backend.ext:extend"
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_points*"]

[tool.setuptools.data-files]
"bias_extensions/points" = ["extension.json"]
"bias_extensions/points/frontend/forum" = ["frontend/forum/index.js", "frontend/forum/pointsRuntime.js", "frontend/forum/ProfilePointsSection.vue", "frontend/forum/sdk.js"]

